[package]
name = "nlyzer"
version = "0.1.0"
edition = "2021"
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
[dependencies]
pcap = "1.2"
tokio = { version = "1" , features = ["full"] }
pnet = { version = "0.31.0" , features = ["std"]}
rayon = "1.7"
clap = { version = "4.0" , features = ["derive"]}
mlua = { version = "0.8" , features = ["lua54"]}
